Improved application functionality